--- a/charity_giveaway/templates/charity_giveaway/login.html
+++ b/charity_giveaway/templates/charity_giveaway/login.html
@@ -4,16 +4,16 @@
     <header>
       <nav class="container container--70">
         <ul class="nav--actions">
-          <li><a href="#">Zaloguj</a></li>
-          <li class="highlighted"><a href="#">Załóż konto</a></li>
+          <li><a href="">Zaloguj</a></li>
+          <li class="highlighted"><a href="{% url 'register' %}">Załóż konto</a></li>
         </ul>
 
         <ul>
-          <li><a href="#">Start</a></li>
-          <li><a href="#">O co chodzi?</a></li>
-          <li><a href="#">O nas</a></li>
-          <li><a href="#">Fundacje i organizacje</a></li>
-          <li><a href="#">Kontakt</a></li>
+          <li><a href="{% url "landing-page" %}">Start</a></li>
+          <li><a href="/#steps">O co chodzi?</a></li>
+          <li><a href="/#about-us">O nas</a></li>
+          <li><a href="/#help">Fundacje i organizacje</a></li>
+          <li><a href="#contact">Kontakt</a></li>
         </ul>
       </nav>
     </header>
@@ -37,7 +37,7 @@
     </section>
 
     <footer>
-        <div class="contact">
+        <div id="contact" class="contact">
           <h2>Skontaktuj się z nami</h2>
           <h3>Formularz kontaktowy</h3>
           <form>
