--- a/charity_giveaway/templates/charity_giveaway/index.html
+++ b/charity_giveaway/templates/charity_giveaway/index.html
@@ -1,4 +1,5 @@
 {% include 'charity_giveaway/base.html' %}
+{% load static %}
 
   <body>
     <header class="header--main-page">
@@ -236,12 +237,12 @@
       <div class="bottom-line">
         <span class="bottom-line--copy">Copyright &copy; 2019</span>
         <div class="bottom-line--icons">
-          <a href="#" class="btn btn--small"><img src="images/icon-facebook.svg"/></a>
-          <a href="#" class="btn btn--small"><img src="images/icon-instagram.svg"/></a>
+          <a href="#" class="btn btn--small"><img src="{% static '/images/icon-facebook.svg' %} "/></a>
+          <a href="#" class="btn btn--small"><img src="{% static 'images/icon-instagram.svg' %}"/></a>
         </div>
       </div>
     </footer>
 
-    <script src="js/app.js"></script>
+    <script src="{%  static 'js/app.js' %}"></script>
   </body>
 </html>
