--- a/charity_giveaway/templates/charity_giveaway/form-confirmation.html
+++ b/charity_giveaway/templates/charity_giveaway/form-confirmation.html
@@ -1,6 +1,7 @@
-{% include 'charity_giveaway/base.html' %}
+{% extends 'charity_giveaway/base.html' %}
+{% load static %}
+{% block content %}
 
-  <body>
     <header class="header--form-page">
       <nav class="container container--70">
         <ul class="nav--actions">
@@ -31,42 +32,5 @@
       </div>
     </header>
 
-    <footer>
-      <div class="contact">
-        <h2>Skontaktuj się z nami</h2>
-        <h3>Formularz kontaktowy</h3>
-        <form class="form--contact">
-          <div class="form-group form-group--50">
-            <input type="text" name="name" placeholder="Imię" />
-          </div>
-          <div class="form-group form-group--50">
-            <input type="text" name="surname" placeholder="Nazwisko" />
-          </div>
+{% endblock %}
 
-          <div class="form-group">
-            <textarea
-              name="message"
-              placeholder="Wiadomość"
-              rows="1"
-            ></textarea>
-          </div>
-
-          <button class="btn" type="submit">Wyślij</button>
-        </form>
-      </div>
-      <div class="bottom-line">
-        <span class="bottom-line--copy">Copyright &copy; 2018</span>
-        <div class="bottom-line--icons">
-          <a href="#" class="btn btn--small"
-            ><img src="images/icon-facebook.svg"
-          /></a>
-          <a href="#" class="btn btn--small"
-            ><img src="images/icon-instagram.svg"
-          /></a>
-        </div>
-      </div>
-    </footer>
-
-    <script src="js/app.js"></script>
-  </body>
-</html>
