--- a/charity_giveaway/templates/charity_giveaway/index.html
+++ b/charity_giveaway/templates/charity_giveaway/index.html
@@ -1,7 +1,7 @@
-{% include 'charity_giveaway/base.html' %}
+{% extends 'charity_giveaway/base.html' %}
 {% load static %}
+{% block content %}
 
-  <body>
     <header class="header--main-page">
       <nav class="container container--70">
         <ul class="nav--actions fixed-top">
@@ -78,9 +78,9 @@
       <div class="about-us--text">
         <h2>O nas</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas vitae animi rem pariatur incidunt libero optio esse quisquam illo omnis.</p>
-        <img src="images/signature.svg" class="about-us--text-signature" alt="Signature" />
+        <img src="{% static 'images/signature.svg' %}" class="about-us--text-signature" alt="Signature" />
       </div>
-      <div class="about-us--image"><img src="images/about-us.jpg" alt="People in circle" /></div>
+      <div class="about-us--image"><img src="{% static 'images/about-us.jpg' %}" alt="People in circle" /></div>
     </section>
 
      <section id="help" class="help">
@@ -94,35 +94,24 @@
 
       <!-- SLIDE 1 -->
       <div class="help--slides active" data-id="1">
-        <p>W naszej bazie znajdziesz listę zweryfikowanych Fundacji, z którymi współpracujemy. Możesz sprawdzić czym się zajmują, komu pomagają i czego potrzebują.</p>
+        <p>W naszej bazie znajdziesz listę zweryfikowanych Fundacji, z którymi współpracujemy.
+            Możesz sprawdzić czym się zajmują, komu pomagają i czego potrzebują.</p>
 
         <ul class="help--slides-items">
+            {% for foundations in foundation.all %}
           <li>
             <div class="col">
-              <div class="title">Fundacja "{{ inst_list.name }}"</div>
-              <div class="subtitle">Cel i misja: {{ inst_list.description | truncatewords:8 }}.</div>
+              <div class="title">Fundacja "{{ foundations.name }}"</div>
+              <div class="subtitle">Cel i misja: {{ foundations.description | truncatewords:8}}.</div>
             </div>
+            <div class="col"><div class="text">
+                {% for category in foundations.categories.all %}
+                {{ category }},
+                {% endfor %}
+            </div></div>
 
-            <div class="col"><div class="text">{{ inst_list.categories }}</div></div>
           </li>
-
-          <li>
-            <div class="col">
-              <div class="title">Fundacja “Dla dzieci"</div>
-              <div class="subtitle">Cel i misja: Pomoc osobom znajdującym się w trudnej sytuacji życiowej.</div>
-            </div>
-
-            <div class="col"><div class="text">ubrania, meble, zabawki</div></div>
-          </li>
-
-          <li>
-            <div class="col">
-              <div class="title">Fundacja “Bez domu”</div>
-              <div class="subtitle">Cel i misja: Pomoc dla osób nie posiadających miejsca zamieszkania</div>
-            </div>
-
-            <div class="col"><div class="text">ubrania, jedzenie, ciepłe koce</div></div>
-          </li>
+            {% endfor %}
         </ul>
         <!-- Pagination
         <ul class="help--slides-pagination">
@@ -137,45 +126,23 @@
       <!-- SLIDE 2 -->
       <div class="help--slides" data-id="2">
         <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic officiis mollitia dolor, neque aspernatur accusamus debitis. Ducimus, officia. Quia, sunt illum! Non iste placeat ab ipsum alias
-          quos suscipit corporis!
-        </p>
+          W naszej bazie znajdują się oficjalne organizacje pozarządowe, z którymi współpracujemy.
+            Możesz sprawdzić czym się zajmują, komu pomagają i czego potrzebują.</p>
         <ul class="help--slides-items">
+            {% for organisations in organisation.all %}
           <li>
             <div class="col">
-              <div class="title">Organizacja 1</div>
-              <div class="subtitle">Lorem ipsum dolor sit amet consectetur.</div>
+              <div class="title">{{ organisations.name }}</div>
+              <div class="subtitle">Cel i misja: {{ organisations.description | truncatewords:8 }}</div>
             </div>
 
-            <div class="col"><div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div></div>
+            <div class="col"><div class="text">
+                {% for category in organisations.categories.all %}
+                {{ category }},
+                {% endfor %}
+            </div></div>
           </li>
-
-          <li>
-            <div class="col">
-              <div class="title">Organizacja 2</div>
-              <div class="subtitle">Lorem ipsum dolor sit amet consectetur.</div>
-            </div>
-
-            <div class="col"><div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div></div>
-          </li>
-
-          <li>
-            <div class="col">
-              <div class="title">Organizacja 3</div>
-              <div class="subtitle">Lorem ipsum dolor sit amet consectetur.</div>
-            </div>
-
-            <div class="col"><div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div></div>
-          </li>
-
-          <li>
-            <div class="col">
-              <div class="title">Organizacja 4</div>
-              <div class="subtitle">Lorem ipsum dolor sit amet consectetur.</div>
-            </div>
-
-            <div class="col"><div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div></div>
-          </li>
+            {% endfor %}
         </ul>
 
         <!-- Pagination
@@ -191,25 +158,23 @@
 
       <!-- SLIDE 3 -->
       <div class="help--slides" data-id="3">
-        <p>Lorem ipsum dolor sit amet, his ocurreret persequeris ea, ad utinam laudem duo. Verterem adipisci partiendo eos ne, ea his reque quaeque recteque, ne quo lobortis intellegam.</p>
+        <p>W naszej bazie znajdziesz listę lokalnych zbiórek, z którymi współpracujemy.
+            Możesz sprawdzić czym się zajmują, komu pomagają i czego potrzebują.</p>
         <ul class="help--slides-items">
+            {% for locals in local.all %}
           <li>
             <div class="col">
-              <div class="title">Lokalna zbiórka 1</div>
-              <div class="subtitle">Lorem ipsum dolor sit amet consectetur.</div>
+              <div class="title">{{ locals.name }}</div>
+              <div class="subtitle">Cel i misja: {{ locals.description | truncatewords:8 }}</div>
             </div>
 
-            <div class="col"><div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div></div>
+            <div class="col"><div class="text">
+                {% for category in locals.categories.all %}
+                {{ category }},
+                {% endfor %}
+            </div></div>
           </li>
-
-          <li>
-            <div class="col">
-              <div class="title">Lokalna zbiórka 2</div>
-              <div class="subtitle">Lorem ipsum dolor sit amet consectetur.</div>
-            </div>
-
-            <div class="col"><div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div></div>
-          </li>
+            {% endfor %}
         </ul>
 
         <!-- Pagination
@@ -221,28 +186,5 @@
       </div>
     </section>
 
-    <footer>
-      <div id="contact" class="contact">
-        <h2>Skontaktuj się z nami</h2>
-        <h3>Formularz kontaktowy</h3>
-        <form class="form--contact">
-          <div class="form-group form-group--50"><input type="text" name="name" placeholder="Imię" /></div>
-          <div class="form-group form-group--50"><input type="text" name="surname" placeholder="Nazwisko" /></div>
+{% endblock %}
 
-          <div class="form-group"><textarea name="message" placeholder="Wiadomość" rows="1"></textarea></div>
-
-          <button class="btn" type="submit">Wyślij</button>
-        </form>
-      </div>
-      <div class="bottom-line">
-        <span class="bottom-line--copy">Copyright &copy; 2019</span>
-        <div class="bottom-line--icons">
-          <a href="#" class="btn btn--small"><img src="{% static '/images/icon-facebook.svg' %} "/></a>
-          <a href="#" class="btn btn--small"><img src="{% static 'images/icon-instagram.svg' %}"/></a>
-        </div>
-      </div>
-    </footer>
-
-    <script src="{%  static 'js/app.js' %}"></script>
-  </body>
-</html>
