--- a/charity_giveaway/templates/charity_giveaway/register.html
+++ b/charity_giveaway/templates/charity_giveaway/register.html
@@ -1,5 +1,6 @@
-{% include 'charity_giveaway/base.html' %}
-
+{% extends 'charity_giveaway/base.html' %}
+{% load static %}
+{% block content %}
   <body>
     <header>
       <nav class="container container--70">
@@ -20,64 +21,34 @@
 
     <section class="login-page">
       <h2>Załóż konto</h2>
-      <form>
-        <div class="form-group">
-          <input type="text" name="name" placeholder="Imię" />
-        </div>
-         <div class="form-group">
-          <input type="text" name="surname" placeholder="Nazwisko" />
-        </div>
-        <div class="form-group">
-          <input type="email" name="email" placeholder="Email" />
-        </div>
-        <div class="form-group">
-          <input type="password" name="password" placeholder="Hasło" />
-        </div>
-        <div class="form-group">
-          <input type="password" name="password2" placeholder="Powtórz hasło" />
-        </div>
+{#      <form>#}
+{#        <div class="form-group">#}
+{#          <input type="text" name="name" placeholder="Imię" />#}
+{#        </div>#}
+{#         <div class="form-group">#}
+{#          <input type="text" name="surname" placeholder="Nazwisko" />#}
+{#        </div>#}
+{#        <div class="form-group">#}
+{#          <input type="email" name="email" placeholder="Email" />#}
+{#        </div>#}
+{#        <div class="form-group">#}
+{#          <input type="password" name="password" placeholder="Hasło" />#}
+{#        </div>#}
+{#        <div class="form-group">#}
+{#          <input type="password" name="password2" placeholder="Powtórz hasło" />#}
+{#        </div>#}
+{##}
+{#        <div class="form-group form-group--buttons">#}
+{#          <a href="{% url 'login' %}" class="btn btn--without-border">Zaloguj się</a>#}
+{#          <button class="btn" type="submit">Załóż konto</button>#}
+{#        </div>#}
+{#      </form>#}
 
-        <div class="form-group form-group--buttons">
-          <a href="{% url 'login' %}" class="btn btn--without-border">Zaloguj się</a>
-          <button class="btn" type="submit">Załóż konto</button>
-        </div>
-      </form>
+      <form method="POST" style="width: 500px; margin:auto">
+        {%  csrf_token %}
+        {{  form.as_p }}
+        <input type="submit" value="Register" class="btn btn-primary">
+    </form>
     </section>
 
-    <footer>
-      <div id="contact" class="contact">
-        <h2>Skontaktuj się z nami</h2>
-        <h3>Formularz kontaktowy</h3>
-        <form>
-          <div class="form-group form-group--50">
-            <input type="text" name="name" placeholder="Imię" />
-          </div>
-          <div class="form-group form-group--50">
-            <input type="text" name="surname" placeholder="Nazwisko" />
-          </div>
-
-          <div class="form-group">
-            <textarea
-              name="message"
-              placeholder="Wiadomość"
-              rows="1"
-            ></textarea>
-          </div>
-
-          <button class="btn" type="submit">Wyślij</button>
-        </form>
-      </div>
-      <div class="bottom-line">
-        <span class="bottom-line--copy">Copyright &copy; 2018</span>
-        <div class="bottom-line--icons">
-          <a href="#" class="btn btn--small"
-            ><img src="images/icon-facebook.svg"
-          /></a>
-          <a href="#" class="btn btn--small"
-            ><img src="images/icon-instagram.svg"
-          /></a>
-        </div>
-      </div>
-    </footer>
-  </body>
-</html>
+{% endblock %}
