--- a/charity_giveaway/templates/charity_giveaway/base.html
+++ b/charity_giveaway/templates/charity_giveaway/base.html
@@ -9,6 +9,41 @@
     <title>Charity Giveaway</title>
   </head>
 
+    <header>
+      <nav class="container container--70">
+          {% if user.is_authenticated %}
+              <ul class="nav--actions">
+                  <li class="logged-user">
+                      Witaj {{ user.first_name }}
+                      <ul class="dropdown">
+                          <li><a href="#">Profil</a></li>
+                          <li><a href="#">Ustawienia</a></li>
+                          {% if user.is_superuser %}
+                          <li><a href="/admin">Panel administracyjny</a></li>
+                          {% endif %}
+                          <li><a href="{% url 'logout' %}">Wyloguj</a></li>
+                      </ul>
+                  </li>
+              </ul>
+
+          {% else %}
+              <ul class="nav--actions">
+                <li><a href="{% url 'login' %}" class="btn btn--small btn--without-border">Zaloguj</a></li>
+                <li><a href="{% url 'register' %}" class="btn btn--small btn--highlighted">Załóż konto</a></li>
+              </ul>
+
+          {% endif %}
+              <ul>
+                  <li><a href="{% url 'landing-page' %}" class="btn btn--without-border active">Start</a></li>
+                  <li><a href="/#steps" class="btn btn--without-border">O co chodzi?</a></li>
+                  <li><a href="/#about-us" class="btn btn--without-border">O nas</a></li>
+                  <li><a href="/#help" class="btn btn--without-border">Fundacje i organizacje</a></li>
+                  <li><a href="{% url 'donate' %}" class="btn btn--without-border">Przekaż dary</a></li>
+                  <li><a href="#contact" class="btn btn--without-border">Kontakt</a></li>
+              </ul>
+      </nav>
+    </header>
+
 {% block content %}
 {% endblock %}
 
