--- a/charity_giveaway/templates/charity_giveaway/login.html
+++ b/charity_giveaway/templates/charity_giveaway/login.html
@@ -3,46 +3,24 @@
 {% block content %}
 
   <body>
-    <header>
-      <nav class="container container--70">
-        <ul class="nav--actions">
-          <li><a href="">Zaloguj</a></li>
-          <li class="highlighted"><a href="{% url 'register' %}">Załóż konto</a></li>
-        </ul>
-
-        <ul>
-          <li><a href="{% url "landing-page" %}">Start</a></li>
-          <li><a href="/#steps">O co chodzi?</a></li>
-          <li><a href="/#about-us">O nas</a></li>
-          <li><a href="/#help">Fundacje i organizacje</a></li>
-          <li><a href="#contact">Kontakt</a></li>
-        </ul>
-      </nav>
-    </header>
 
     <section class="login-page">
       <h2>Zaloguj się</h2>
-{#      <form>#}
-{#        <div class="form-group">#}
-{#          <input type="email" name="email" placeholder="Email" />#}
-{#        </div>#}
-{#        <div class="form-group">#}
-{#          <input type="password" name="password" placeholder="Hasło" />#}
-{#          <a href="#" class="btn btn--small btn--without-border reset-password">Przypomnij hasło</a>#}
-{#        </div>#}
-{##}
-{#        <div class="form-group form-group--buttons">#}
-{#          <a href="{% url 'register' %}" class="btn btn--without-border">Załóż konto</a>#}
-{#          <button class="btn" type="submit">Zaloguj się</button> #}
-{#        </div>#}
-{#      </form>#}
+      <form method="POST">
+          {% csrf_token %}
+        <div class="form-group">
+          <input type="email" name="username" placeholder="Email" />
+        </div>
+        <div class="form-group">
+          <input type="password" name="password" placeholder="Hasło" />
+          <a href="#" class="btn btn--small btn--without-border reset-password">Przypomnij hasło</a>
+        </div>
 
-    <form method="POST" style="width: 500px; margin:auto">
-        {%  csrf_token %}
-        <h2>Login</h2>
-        {{  form.as_p }}
-        <input type="submit" value="Login" class="btn btn-primary">
-    </form>
+        <div class="form-group form-group--buttons">
+          <a href="{% url 'register' %}" class="btn btn--without-border">Załóż konto</a>
+          <button class="btn" type="submit">Zaloguj się</button>
+        </div>
+      </form>
     </section>
-
+  </body>
     {% endblock %}
