--- a/charity_giveaway/templates/charity_giveaway/register.html
+++ b/charity_giveaway/templates/charity_giveaway/register.html
@@ -1,54 +1,33 @@
 {% extends 'charity_giveaway/base.html' %}
 {% load static %}
 {% block content %}
-  <body>
-    <header>
-      <nav class="container container--70">
-        <ul class="nav--actions">
-          <li><a href="{% url 'login' %}">Zaloguj</a></li>
-          <li class="highlighted"><a href="">Załóż konto</a></li>
-        </ul>
 
-        <ul>
-          <li><a href="{% url "landing-page" %}">Start</a></li>
-          <li><a href="/#steps">O co chodzi?</a></li>
-          <li><a href="/#about-us">O nas</a></li>
-          <li><a href="/#help">Fundacje i organizacje</a></li>
-          <li><a href="#contact">Kontakt</a></li>
-        </ul>
-      </nav>
-    </header>
 
     <section class="login-page">
       <h2>Załóż konto</h2>
-{#      <form>#}
-{#        <div class="form-group">#}
-{#          <input type="text" name="name" placeholder="Imię" />#}
-{#        </div>#}
-{#         <div class="form-group">#}
-{#          <input type="text" name="surname" placeholder="Nazwisko" />#}
-{#        </div>#}
-{#        <div class="form-group">#}
-{#          <input type="email" name="email" placeholder="Email" />#}
-{#        </div>#}
-{#        <div class="form-group">#}
-{#          <input type="password" name="password" placeholder="Hasło" />#}
-{#        </div>#}
-{#        <div class="form-group">#}
-{#          <input type="password" name="password2" placeholder="Powtórz hasło" />#}
-{#        </div>#}
-{##}
-{#        <div class="form-group form-group--buttons">#}
-{#          <a href="{% url 'login' %}" class="btn btn--without-border">Zaloguj się</a>#}
-{#          <button class="btn" type="submit">Załóż konto</button>#}
-{#        </div>#}
-{#      </form>#}
+      <form method="POST">
+          {% csrf_token %}
+        <div class="form-group">
+          <input type="text" name="first_name" placeholder="Imię" />
+        </div>
+         <div class="form-group">
+          <input type="text" name="last_name" placeholder="Nazwisko" />
+        </div>
+        <div class="form-group">
+          <input type="email" name="username" placeholder="Email" />
+        </div>
+        <div class="form-group">
+          <input type="password" name="password" placeholder="Hasło" />
+        </div>
+        <div class="form-group">
+          <input type="password" name="password_repeat" placeholder="Powtórz hasło" />
+        </div>
 
-      <form method="POST" style="width: 500px; margin:auto">
-        {%  csrf_token %}
-        {{  form.as_p }}
-        <input type="submit" value="Register" class="btn btn-primary">
-    </form>
+        <div class="form-group form-group--buttons">
+          <a href="{% url 'login' %}" class="btn btn--without-border">Zaloguj się</a>
+          <button class="btn" type="submit">Załóż konto</button>
+        </div>
+      </form>
     </section>
 
 {% endblock %}
