--- a/charity_giveaway/templates/charity_giveaway/base.html
+++ b/charity_giveaway/templates/charity_giveaway/base.html
@@ -16,7 +16,7 @@
                   <li class="logged-user">
                       Witaj {{ user.first_name }}
                       <ul class="dropdown">
-                          <li><a href="#">Profil</a></li>
+                          <li><a href="{% url 'profile' user.id %}">Profil</a></li>
                           <li><a href="#">Ustawienia</a></li>
                           {% if user.is_superuser %}
                           <li><a href="/admin">Panel administracyjny</a></li>
