--- a/charity_giveaway/templates/charity_giveaway/login.html
+++ b/charity_giveaway/templates/charity_giveaway/login.html
@@ -9,7 +9,7 @@
       <form method="POST">
           {% csrf_token %}
         <div class="form-group">
-          <input type="email" name="username" placeholder="Email" />
+          <input type="email" name="email" placeholder="Email" />
         </div>
         <div class="form-group">
           <input type="password" name="password" placeholder="Hasło" />
