--- a/charity_giveaway/templates/charity_giveaway/register.html
+++ b/charity_giveaway/templates/charity_giveaway/register.html
@@ -14,7 +14,7 @@
           <input type="text" name="last_name" placeholder="Nazwisko" />
         </div>
         <div class="form-group">
-          <input type="email" name="username" placeholder="Email" />
+          <input type="email" name="email" placeholder="Email" />
         </div>
         <div class="form-group">
           <input type="password" name="password" placeholder="Hasło" />
